# kaz-nu-time-series

./: README.md  main.py  pyproject.toml
ipynb/: 00-intro.ipynb
