[project]
name = "kaz-nu-time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
